--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.7"
+    "mongoose": "^5.10.7",
+    "node-uuid": "^1.4.8",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
